[CSV] Configure account autodetection per profile

CSV importer had a global option enabling account name autodetection
based on the header contents. This, however, should only really be
enabled if the CSV file contains actual account name, and therefore
configurable *per profile*.

Also: run clang-format against touched source files.

BUG: 444741